# DocCraft

./: .env.example  .gitignore  README.md  flow.py  pyproject.toml  state.py  template.docx  test_template.docx
example_result/: report_filled_20260407T171514Z.docx  report_review_checklist_20260407T171514Z.docx
nodes/: analyze_slots_with_crosscheck.py  build_report_docx.py  consistency_check.py  docx_style.py  extract_templete_requirements.py  generate_slot_drafts.py  preprocess_paper.py  review_slot_drafts.py  schemas.py  search_related.py  semantic_retrieval.py  slot_skills.py  slot_subgraph.py
